# rational-policy-gradient

./: .gitignore  README.md  demo.ipynb  pyproject.toml
.github/workflows/: ci.yml
data/configs/: rpg_hanabi.yaml  rpg_matrix.yaml  rpg_overcooked.yaml  rpg_storm.yaml
rational_policy_gradient/: root.py  rpg.py  rpg_algs.py  utils.py
rational_policy_gradient/extra_environments/: __init__.py
rational_policy_gradient/extra_environments/normal_form/: __init__.py
rational_policy_gradient/extra_environments/overcooked/: extra_layouts.py  interactive.py
rational_policy_gradient/extra_environments/storm/: __init__.py  storm_2p_sabotage.py  storm_independent.py
rational_policy_gradient/wrappers/: registration_wrapper.py  world_state.py
rational_policy_optimization/: rpg.py  utils.py
rational_policy_optimization/extra_environments/normal_form/: normal_form.py
rational_policy_optimization/extra_environments/overcooked/: __init__.py
rational_policy_optimization/extra_environments/storm/: storm_2p_small.py
rational_policy_optimization/wrappers/: env_wrappers.py
tests/: test_adv_normal.py  test_api.py  test_extensive_game.py  test_normal_game.py  test_storm.py  test_utils.py
tests/configs/: test_adv_normal.yaml  test_rational_search_extensive.yaml  test_rational_search_normal.yaml  test_storm_step.yaml
